# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  setup.cfg
labels/: models.py  tests.py  views.py
labels/templates/labels/: create.html  label_form.html  label_update_form.html
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo
statuses/: models.py  tests.py  views.py
statuses/templates/layout/: base.html
statuses/templates/registration/: login.html
statuses/templates/statuses/: create.html  delete.html  index.html  status_confirm_delete.html  status_form.html  status_list.html  status_update_form.html
task_manager/: models.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: load_fixture.py
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/labels/: label_confirm_delete.html  label_list.html
task_manager/templates/layout/: base.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: index.html
task_manager/templates/task_manager/: login.html
task_manager/templates/tasks/: task_list.html
task_manager/users/: admin.py  forms.py  mixins.py  tests.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_remove_task_labels_alter_task_status_and_more.py
templates/: users.html
templates/layout/: base.html
templates/registration/: delete.html
users/: forms.py  mixins.py  tests.py  urls.py  views.py
(+25 files in other folders)
