[tool.poetry]
name = "python-project-52"
version = "0.1.0"
description = "Task manager"
authors = ["AlloKuz <a.o.kuzmin.rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.2"
gunicorn = "^22.0.0"
uvicorn = "^0.30.5"
django-extensions = "^3.2.3"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
django-filter = "^24.3"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
rollbar = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
django-shell-plus = "^1.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"